--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <artifactId>Jigsaw-spring-cloud-lifecycle</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <modules>
+    <module>core</module>
     <module>order-service</module>
   </modules>
   <packaging>pom</packaging>
