--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,4 +8,33 @@
   <packaging>jar</packaging>
   <modelVersion>4.0.0</modelVersion>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>1.8</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <lifecycle.version>0.9.12</lifecycle.version>
+    <lifecycle.weaver.version>0.9.1</lifecycle.weaver.version>
+  </properties>
+
+  <dependencies>
+
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+      <version>1.13.8.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+    <!-- [Lifecycle] -->
+    <dependency>
+      <groupId>net.imadz</groupId>
+      <artifactId>Lifecycle</artifactId>
+      <version>${lifecycle.version}</version>
+    </dependency>
+    <!-- Lifecycle Ends -->
+  </dependencies>
 </project>
