--- a/core/pom.xml
+++ b/core/pom.xml
@@ -45,6 +45,24 @@
       <version>${lifecycle.version}</version>
     </dependency>
     <!-- Lifecycle Ends -->
+
+    <!-- kafka -->
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>0.9.0.1</version>
+    </dependency>
+    <!--alibaba-->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.1.15</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
+      <version>RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
