--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3312/dmall_order_db?noAccessToProcedureBodies=true&createDatabaseIfNotExist=true&m=yes&characterEncoding=UTF-8&connectTimeout=300000&useSSL=false&socketTimeout=30000&autoReconnect=true&maxReconnects=10&initialTimeout=10
+    url: jdbc:mysql://localhost:3312/dmall_order_db?noAccessToProcedureBodies=true&createDatabaseIfNotExist=true&m=yes&characterEncoding=UTF-8&connectTimeout=30000&useSSL=false&socketTimeout=30000&autoReconnect=true&maxReconnects=10&initialTimeout=10
     username: root
     password: 1q2w3e4r5t
     driver-class-name: com.mysql.jdbc.Driver
@@ -15,3 +15,26 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: true
     generate-ddl: false
+
+
+kafka:
+  producer:
+    initParams:
+      - bootstrap.servers=127.0.0.1:9092
+      - key.serializer=org.apache.kafka.common.serialization.StringSerializer
+      - value.serializer=org.apache.kafka.common.serialization.StringSerializer
+      - acks=1
+      - request.timeout.ms=15000
+      - compression.type=gzip
+
+  consumer:
+    initParams:
+      - bootstrap.servers=127.0.0.1:9092
+      - group.id=kafkatest
+      - enable.auto.commit=true
+      - auto.commit.interval.ms=10000
+      - heartbeat.interval.ms=2000
+      - session.timeout.ms=10000
+      - key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+      - value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+    threadNum: 5
